--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -24,6 +24,11 @@ spring.jpa:
 logging:
   level:
     org:
+      springframework:
+      # Spring transaction 확인용
+        transaction:
+          interceptor: trace
+      # DB 인자 확인용
       hibernate:
         type:
           descriptor:
