--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -28,8 +28,15 @@ logging:
       # Spring transaction 확인용
         transaction:
           interceptor: trace
+        jdbc:
+          dataSourceTransactionManager: debug
+        orm:
+          jpa:
+            jpaTransactionManager: debug
       # DB 인자 확인용
       hibernate:
         type:
           descriptor:
             sql: trace
+        resource:
+          transaction: debug
