feat 예외와 트랜잭션 커밋과 롤백

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -33,12 +33,11 @@ logging:
             jpa: debug
       # DB 인자 확인용
       hibernate:
-        SQL:
-          debug
+#        SQL:
+#          debug
         type:
           descriptor:
             sql: trace
-            BasicBinder: debug
         resource:
           transaction: debug
 
