--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -28,13 +28,13 @@ logging:
           transaction:
             interceptor: trace
           jdbc:
-            dataSourceTransactionManager: debug
+            datasource:
+              DataSourceTransactionManager: debug
           orm:
-            jpa: debug
+            jpa:
+              JpaTransactionManager: debug
       # DB 인자 확인용
       hibernate:
-#        SQL:
-#          debug
         type:
           descriptor:
             sql: trace
